Sat Jan 18 23:58:43 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - added "Tecnoware Easy Power 1200" to "megatec.8" and driver.list
 - point "Megatec Protocol" to "megatec" in driver.list

Sat Jan 14 16:21:11 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: minor changes to the manpage
 - added "Trust UPS 1000 Management PW-4105" to driver.list

Tue Jan  3 02:09:27 UTC 2006 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - megatec: new "lowbatt" parameter (overrides the hardware low battery level)

Fri Dec 16 20:21:43 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - newhidups.8, mge-shut.8, mge-utalk.8, driver.list: various update
 - FAQ: update USB support information

Tue Dec  6 04:03:11 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - added Belkin F6C800-UNV to scripts/hotplug/libhid.usermap (thanks drew.kay)
 - added Belkin F6C1500-TW-RK to data/driver.list (thanks "Big Wave Dave")

Fri Nov 25 10:02:15 UTC 2005 / Arnaud Quette <aquette.dev@gmail.com>

 - fentonups: correct the INELT Monolith 1000LT definition

   (Yuri V. Kurenkov)

Thu Nov 24 05:50:59 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - updated newhidups man page to reflect multi-unit capability

Tue Nov 15 17:35:00 CEST 2005 / Kjell Claesson <kjell.claesson@telia.com>

 * driver.list:
   - add HP R5500 XR compatibility with bcmxcp

Sat Nov 12 05:12:20 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups, mge-shut: rewrote HID parser interface to parse the
   Report Descriptor into a data structure, instead of re-scanning it
   as a byte array all the time.

Wed Nov  9 02:14:01 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: cleaned up dependencies on $(LIBUSB_CFLAGS)

Mon Nov  7 22:11:11 UTC 2005 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: added rudimentary Tripp Lite support, still incomplete
   and unstable.