@@ -28,7 +28,7 @@
 #include <sys/stat.h>
 #include <sys/ioctl.h>
 #include <sys/types.h>
-#include <sys/termios.h>
+#include "serial.h"
 #include <limits.h>
 
 /* nut includes */
